# y-hft

./: .gitignore  README.md
exchange-rs/: Cargo.toml  README.md
exchange-rs/benches/: benchmark.rs  concurrent_benchmarks.rs  fix_protocol_bench.rs  matching_engine_bench.rs  matching_engine_benchmarks.rs  order_benchmarks.rs  sbe_protocol_bench.rs
exchange-rs/examples/: sbe_deribit_integration.rs
exchange-rs/src/: fix_gateway.rs  lib.rs  main.rs  matching_engine.rs  metrics.rs  optimizations.rs  order.rs  orderbook.rs  price_utils.rs  snapshot.rs
exchange-rs/src/fix/: error.rs  mod.rs
exchange-rs/src/fix/bridge/: mod.rs  order_converter.rs  response_converter.rs
exchange-rs/src/fix/messages/: execution_report.rs  header.rs  heartbeat.rs  logon.rs  mod.rs  (+3 more)
exchange-rs/src/matching_engine/: tests.rs
exchange-rs/src/order/: tests.rs
exchange-rs/src/orderbook/: tests.rs
exchange-rs/src/sbe/: book_change.rs  book_codec.rs  bridge.rs  combo_legs_codec.rs  direction.rs  group_size_encoding_codec.rs  instrument_codec.rs  instrument_v2_codec.rs  integration.rs.bak  message_header_codec.rs  mod.rs  multicast.rs  option_type.rs  parser.rs  period.rs  price_index_codec.rs  rfq_codec.rs  simple.rs  snapshot_codec.rs  snapshot_end_codec.rs  snapshot_start_codec.rs  tick_direction.rs  ticker_codec.rs  trades_codec.rs  var_string_codec.rs  yes_no.rs
exchange-rs/tests/: fix_bridge_tests.rs  fix_parser_tests.rs  integration_tests.rs  matching_engine_tests.rs  order_tests.rs  orderbook_tests.rs  sbe_integration_tests.rs  sbe_tests.rs  simple_sbe_test.rs  test_utils.rs
(+39 files in other folders)
