[package]
name = "exchange-rs"
version = "0.1.0"
edition = "2021"
description = "A high-performance limit order book implementation in Rust"
authors = ["Exchange Team"]

[dependencies]
crossbeam = "0.8"
crossbeam-utils = "0.8"
chrono = "0.4"
dashmap = "5.4"
parking_lot = "0.12"
rayon = "1.7"
thiserror = "1.0"
num_cpus = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bytes = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
socket2 = "0.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matching_engine_bench"
harness = false

[[bench]]
name = "sbe_protocol_bench"
harness = false

[[bench]]
name = "fix_protocol_bench"
harness = false
